force-app/main/default/objects/Secondary_Advance_Receipt__c/Secondary_Advance_Receipt__c.object-meta.xml
<CustomObject>
    <label>Secondary Advance Receipt</label>
    <nameField>
        <displayFormat>ADV-{0000}</displayFormat>
        <label>Secondary Advance Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secondary Advance Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>