force-app/main/default/objects/Secondary_Advance_Receipt__c/fields/Advance_date__c.field-meta.xml
<CustomField>
    <fullName>Advance_date__c</fullName>
    <label>Advance date</label>
    <type>Date</type>
</CustomField>