force-app/main/default/objects/Secondary_Advance_Receipt__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Secondary Advance Receipts</relationshipLabel>
    <relationshipName>Secondary_Advance_Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>