force-app/main/default/objects/Secondary_Advance_Receipt__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Secondary Advance Receipts (Distributor)</relationshipLabel>
    <relationshipName>Secondary_Advance_Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>